--- a/style.css
+++ b/style.css
@@ -1,3 +1,24 @@
 p {
     color: royalblue;
 }
+
+h1 {
+    color: rgb(62, 5, 77);
+}
+
+.title {
+    color: rgb(0, 41, 107);
+    font-weight: 100;
+}
+
+.uppercase {
+    text-transform: uppercase;
+}
+
+a:hover {
+    color: rgb(192, 27, 27);
+}
+
+p:hover {
+    color: yellowgreen;
+}
